--- a/index.html
+++ b/index.html
@@ -17,36 +17,36 @@
                 <li><a href="#recursos">Recursos</a></li>
             </ul>
         </nav>
-        <div class="hero">
-            <div class="hero-content">
+        <div class="portada">
+            <div class="port-contenido">
                 <h1>Amamos a tus Compañeros Peludos</h1>
                 <p>Descubre todo sobre el cuidado, la salud y la adopción de mascotas.</p>
-                <a href="#tipos" class="button">Explora Ahora</a>
+                <a href="#tipos" class="boton">Explora Ahora</a>
             </div>
-            <img src="imagenes/portada_mascotas.jpg" alt="Imagen de Portada" class="hero-image">
+            <img src="imagenes/portada_mascotas.jpg" alt="Imagen de Portada" class="port-imagen">
         </div>
     </header>
 
     <main>
-        <section id="tipos" class="section">
+        <section id="tipos" class="seccion">
             <h2>Tipos de Mascotas</h2>
-            <div class="grid-container">
-                <div class="pet-type-card">
+            <div class="grupo-elementos">
+                <div class="tarjeta-mascota">
                     <img src="imagenes/tipo_perro.jpg" alt="Perro">
                     <h3>Perros</h3>
                     <p>El mejor amigo del hombre. Conoce las razas y sus necesidades.</p>
                 </div>
-                <div class="pet-type-card">
+                <div class="tarjeta-mascota">
                     <img src="imagenes/tipo_gato.jpg" alt="Gato">
                     <h3>Gatos</h3>
                     <p>Compañeros independientes y llenos de cariño.</p>
                 </div>
-                <div class="pet-type-card">
+                <div class="tarjeta-mascota">
                     <img src="imagenes/tipo_conejo.jpg" alt="Conejo">
                     <h3>Conejos</h3>
                     <p>Pequeños y adorables, ideales para familias.</p>
                 </div>
-                <div class="pet-type-card">
+                <div class="tarjeta-mascota">
                     <img src="imagenes/tipo_ave.jpg" alt="Ave">
                     <h3>Aves</h3>
                     <p>Color y alegría en tu hogar con nuestros amigos alados.</p>
@@ -54,13 +54,13 @@
             </div>
         </section>
 
-        <section id="veterinarios" class="section bg-light">
+        <section id="veterinarios" class="seccion-fondo">
             <h2>Ubicación de Veterinarios Cercanos</h2>
-            <div class="veterinarian-info">
-                <div class="map-container">
+            <div class="informacion-veterinaria">
+                <div class="contenido-map">
                     <img src="imagenes/mapa_veterinarios.jpg" alt="Mapa de Veterinarios">
                 </div>
-                <div class="veterinarian-details">
+                <div class="detalle_veterinaria">
                     <h3>Encuentra un Veterinario</h3>
                     <p>Busca clínicas y hospitales veterinarios en tu área.</p>
                     <ul>
@@ -73,25 +73,25 @@
             </div>
         </section>
 
-        <section id="cuidados" class="section">
+        <section id="cuidados" class="seccion">
             <h2>Cuidados Esenciales para tus Mascotas</h2>
-            <div class="care-grid">
-                <div class="care-item">
+            <div class="cont-cuidados">
+                <div class="item-cuidados">
                     <img src="imagenes/cuidado_alimentacion.jpg" alt="Alimento">
                     <h3>Alimentación</h3>
                     <p>Guías sobre la mejor alimentación para cada tipo de mascota.</p>
                 </div>
-                <div class="care-item">
+                <div class="item-cuidados">
                     <img src="imagenes/cuidado_salud.jpg" alt="Salud">
                     <h3>Salud e Higiene</h3>
                     <p>Consejos para mantener a tu mascota sana y limpia.</p>
                 </div>
-                <div class="care-item">
+                <div class="item-cuidados">
                     <img src="imagenes/cuidado_ejercicio.jpg" alt="Ejercicio">
                     <h3>Ejercicio y Juego</h3>
                     <p>Importancia de la actividad física para su bienestar.</p>
                 </div>
-                <div class="care-item">
+                <div class="item-cuidados">
                     <img src="imagenes/cuidado_educacion.jpg" alt="Educación">
                     <h3>Educación y Adiestramiento</h3>
                     <p>Tips para educar a tu mascota de forma positiva.</p>
@@ -99,32 +99,32 @@
             </div>
         </section>
 
-        <section id="recursos" class="section bg-light">
+        <section id="recursos" class="seccion-fondo">
             <h2>Recursos Útiles</h2>
-            <div class="resources-grid">
-                <div class="resource-card">
+            <div class="grupo-recursos">
+                <div class="tarjeta-recursos">
                     <img src="imagenes/recurso_adopcion.jpg" alt="Adopción">
                     <h3>Adopción Responsable</h3>
                     <p>Encuentra organizaciones y consejos para adoptar una mascota.</p>
-                    <a href="#" class="resource-link">Más información</a>
+                    <a href="#" class="link-recursos">Más información</a>
                 </div>
-                <div class="resource-card">
+                <div class="tarjeta-recursos">
                     <img src="imagenes/recurso_noticias.jpg" alt="Noticias">
                     <h3>Noticias y Eventos</h3>
                     <p>Mantente al día con las últimas novedades del mundo animal.</p>
-                    <a href="#" class="resource-link">Leer más</a>
+                    <a href="#" class="link-recursos">Leer más</a>
                 </div>
-                <div class="resource-card">
+                <div class="tarjeta-recursos">
                     <img src="imagenes/recurso_comunidad.jpg" alt="Comunidad">
                     <h3>Comunidad de Mascotas</h3>
                     <p>Conéctate con otros dueños de mascotas y comparte experiencias.</p>
-                    <a href="#" class="resource-link">Únete ahora</a>
+                    <a href="#" class="link-recursos">Únete ahora</a>
                 </div>
-                <div class="resource-card">
+                <div class="tarjeta-recursos">
                     <img src="imagenes/recurso_guias.jpg" alt="Guías">
                     <h3>Guías y Consejos</h3>
                     <p>Artículos detallados sobre el cuidado de diferentes mascotas.</p>
-                    <a href="#" class="resource-link">Ver guías</a>
+                    <a href="#" class="link-recursos">Ver guías</a>
                 </div>
             </div>
         </section>
